test/client/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  bootstrap: |
    enemies=aliens
    lives=3
    enemies.cheat=true
    enemies.cheat.level=noGoodRotten
    secret.code.passphrase=UUDDLRLRBABAS
    secret.code.allowed=true
    secret.code.lives=30

kubectl create configmap envoy-config --from-file=bootstrap=envoy.yaml -o yaml --dry-run | kubectl replace -f -
