test/client/envoy-configmap.yaml
apiVersion: v1
data:
  bootstrap: "node:\r\n  id: sidecar~192.168.0.132~echo-service-5d7bdb498d-ckk8q.default~default.svc.cluster.local\r\n
    \ cluster: echo-service\r\nadmin:\r\n  access_log_path: /dev/stdout\r\n  address:\r\n
    \   socket_address:\r\n      protocol: TCP\r\n      address: 127.0.0.1\r\n      port_value:
    15000\r\nstatic_resources:\r\n  clusters:\r\n  - name: xds_cluster\r\n    connect_timeout:
    5s\r\n    type: STATIC\r\n    http2_protocol_options: {}\r\n    hosts:\r\n    -
    socket_address:\r\n        address: 10.100.5.46\r\n        port_value: 9000\r\ndynamic_resources:\r\n
    \ ads_config:\r\n    api_type: GRPC\r\n    grpc_services:\r\n      envoy_grpc:\r\n
    \       cluster_name: xds_cluster\r\n  lds_config: {ads: {}}\r\n  cds_config:
    {ads: {}}\r\n\r\n"
kind: ConfigMap
metadata:
  creationTimestamp: null
  name: envoy-config-client
