test/client/envoy-working.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 15000
static_resources:
  listeners:
  - name: virtual
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15001
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: BlackHoleCluster
          cluster: BlackHoleCluster
    - filter_chain_match:
        destination_port: 80
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["google.com","example.com","*.facebook.com"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_example
          http_filters:
          - name: envoy.router
    - filter_chain_match:
        destination_port: 8080
      filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_tcp
          cluster: mesh_service
    listener_filters:
      name: envoy.listener.original_dst
  clusters:
  - name: service_example
    connect_timeout: 1s
    type: STATIC
    hosts:
    - socket_address:
        address: 93.184.216.34
        port_value: 80
  - name: mesh_service
    connect_timeout: 1s
    type: STRICT_DNS
    hosts:
    - socket_address:
        address: mesh-server
        port_value: 8080
  - name: BlackHoleCluster
    connect_timeout: 1s
