test/client/envoy.yaml
node:
  id: sidecar~192.168.0.132~echo-service-5d7bdb498d-ckk8q.default~default.svc.cluster.local
  cluster: echo-service
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 15000
static_resources:
  clusters:
  - name: xds_cluster
    connect_timeout: 5s
    type: STATIC
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 10.100.5.46
        port_value: 9000
dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: xds_cluster
  lds_config: {ads: {}}
  cds_config: {ads: {}}
